--- a/playlister/templates/base.html
+++ b/playlister/templates/base.html
@@ -6,15 +6,15 @@
     <script src="https://kit.fontawesome.com/e7c15fdb77.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>makewiki</title>
+    <title>Playlister</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <a class="navbar-brand" href="{% url 'wiki-list-page' %}"><i class="fas fa-fw fa-book"></i> makewiki</a>
+      <a class="navbar-brand" href="{% url 'wiki-list-page' %}"><i class="fas fa-fw fa-book"></i> Playlister</a>
       <form class="form-inline ml-auto">
         {% if user.is_authenticated %}
         <div class="text-white">Hello, <strong>{{user.username}}</strong>!</div>
-        <a href="new_page/" class="btn btn-success ml-4">New Page</a>
+        <a href="new_playlist/" class="btn btn-success ml-4">New Playlist</a>
         <a href="/accounts/logout" class="btn btn-danger ml-2">Log Out</a>
         {% else %}
         <a href="/accounts/login" class="btn btn-secondary ml-2">Log In</a>
