--- a/playlister/templates/registration/signup.html
+++ b/playlister/templates/registration/signup.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h3>Sign Up <small class="text-muted">to create your own wiki pages!</small></h3>
+  <h3>Sign Up <small class="text-muted">to create your own playlists!</small></h3>
   <hr>
       <div class="row">
         <div class="col">
