fixed template error

--- a/playlister/playlist/templates/new_playlist.html
+++ b/playlister/playlist/templates/new_playlist.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
-
+{% load static %}
+<html>
+    <head>
+        {% block head %}
+        <link rel="stylesheet" type="text/css" href="{% static 'playlist/style.css' %}">
+        {% endblock head %}
+    </head>
 {% block content %}
 <form action='' method='POST'> 
     {% csrf_token %}
