fixed variable names

--- a/playlister/playlist/templates/partials/card.html
+++ b/playlister/playlist/templates/partials/card.html
@@ -1,5 +1,5 @@
 <div class="card mb-3">
-    <h5 class="card-header ">{{ playlist.title }}</h5>
+    <h5 class="card-header ">{{ playlist.playlist_name }}</h5>
     <div class="card-body border-dark">
       <p class="card-text text-dark">
         {{ playlist.description|truncatewords_html:30 }}
