--- a/playlister/playlist/templates/playlist.html
+++ b/playlister/playlist/templates/playlist.html
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="row">
     <div class="col m-4">
-      <h3>{{ playlist.title }} <small class="text-muted">Last updated {{ page.modified|date:"SHORT_DATETIME_FORMAT" }} by <b>{{ playlist.author.username }}</b></small></h3>
+      <h3>{{ playlist.playlist_name }} <small class="text-muted">Last updated {{ playlist.modified|date:"SHORT_DATETIME_FORMAT" }} by <b>{{ playlist.author.username }}</b></small></h3>
       <hr>
       <p>{{ playlist.content|linebreaksbr }}</p>
       <hr>
