--- a/playlister/playlist/templates/index.html
+++ b/playlister/playlist/templates/index.html
@@ -8,7 +8,7 @@
     </head>
 <body>
 {% block content %}
-  <h3>Mytunes {% if playlists %}<small class="text-muted">({{ playlists|length }} Mytunes{{ playlists|length|pluralize:"s" }})</small>{% endif %}</h3>
+  <h3>Mytunes {% if playlists %}<small class="text-muted">({{ playlists|length }} Playlists)</small>{% endif %}</h3>
   <hr>
   {% if playlists %}
     <div class="card-columns">
