--- a/playlister/playlist/static/playlist/style.css
+++ b/playlister/playlist/static/playlist/style.css
@@ -1,3 +1,8 @@
+
 body {
-    background-color: greenyellow;
+    height: 100%;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-image: linear-gradient(to bottom right, rgb(0, 255, 0), rgb(0, 208, 255), rgb(255, 0, 255)); /* Standard syntax (must be last) */
 }
