--- a/playlister/templates/registration/login.html
+++ b/playlister/templates/registration/login.html
@@ -8,7 +8,7 @@
     </head>
 
 {% block content %}
-    <h3>Log In <small class="text-muted">to create your own wiki pages!</small></h3>
+    <h3>Log In <small class="text-muted">to create your own playlists!</small></h3>
     <hr>
     <div class="row">
         <div class="col">
