--- a/playlist/templates/new_playlist.html
+++ b/playlist/templates/new_playlist.html
@@ -11,6 +11,6 @@
 <form action='' method='POST'> 
     {% csrf_token %}
     {{form.as_p}}
-    <input type="submit">Submit
+    <input type="submit">
 </form>
 {% endblock %}
