--- a/playlist/templates/playlist.html
+++ b/playlist/templates/playlist.html
@@ -14,9 +14,20 @@
       <h3>{{ playlist.playlist_name }} <small class="text-muted">Last updated {{ playlist.modified|date:"SHORT_DATETIME_FORMAT" }} by <b>{{ playlist.author.username }}</b></small></h3>
       <hr>
       <p>Created by: {{ playlist.author|linebreaksbr }}</p>
-      <p>{{ playlist.video_link|linebreaksbr }}</p>
       <p>{{ playlist.description|linebreaksbr }}</p>
+      {% for video in playlist.video_set.all %}
+      <iframe width="420" height="315"
+          src="{{ video.video }}">
+        </iframe>
+      {% endfor %}
       <hr>
+      <form action='' method='POST'> 
+        {% csrf_token %}
+        {{ video_form.as_p|linebreaksbr }}
+        <input type="submit">
+      </form>
+
+      <p>For links to youtube videos, include in the form of "https://www.youtube.com/embed/".</p>
       <a href="{% url 'playlist-list-page' %}">Back to List</a>
     </div>
   </div>
