added more visuals

--- a/playlist/templates/playlist.html
+++ b/playlist/templates/playlist.html
@@ -23,10 +23,9 @@
       <hr>
       <form action='' method='POST'> 
         {% csrf_token %}
-        {{ video_form.as_p|linebreaksbr }}
+        {{ video_form.as_p|linebreaksbr }} <p>For links to youtube videos, include in the form of "https://www.youtube.com/embed/".</p>
         <input type="submit">
       </form>
-      <p>For links to youtube videos, include in the form of "https://www.youtube.com/embed/".</p>
       <a href="{% url 'playlist-list-page' %}">Back to List</a>
     </div>
   </div>
