fixing css for now

--- a/playlist/templates/new_playlist.html
+++ b/playlist/templates/new_playlist.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
-{% load static %}
+{% extends 'base.html' %}
+<!--CSS code (Need to work on later)-->
+<!--{% load static %}-->
 <html>
-    <head>
+ <!--<head>
         {% block head %}
-        <link rel="stylesheet" type="text/css" href="{% static 'playlist/style.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'question/style.css' %}">
         {% endblock head %}
-    </head>
+    </head>-->
     
 {% block content %}
 <form action='' method='POST'> 
