--- a/playlist/templates/playlist.html
+++ b/playlist/templates/playlist.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
-
-{% load static %}
+<!--CSS code (Need to work on later)-->
+<!--{% load static %}-->
 <html>
-    <head>
+ <!--<head>
         {% block head %}
-        <link rel="stylesheet" type="text/css" href="{% static 'playlist/style.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'question/style.css' %}">
         {% endblock head %}
-    </head>
+    </head>-->
     
 {% block content %}
   <div class="row">
