--- a/playlist/templates/playlist.html
+++ b/playlist/templates/playlist.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 <!--CSS code (Need to work on later)-->
-<!--{% load static %}-->
+{% load static %}
 <html>
- <!--<head>
+ <head>
         {% block head %}
-        <link rel="stylesheet" type="text/css" href="{% static 'question/style.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'playlist/style.css' %}">
         {% endblock head %}
-    </head>-->
+    </head>
     
 {% block content %}
 <div class="card mb-3">
