--- a/playlist/static/playlist/style.css
+++ b/playlist/static/playlist/style.css
@@ -1,11 +1,30 @@
 
-body {
+/* body {
     height: 100%;
     margin: 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-image: linear-gradient(to bottom right, rgb(0, 255, 0), rgb(0, 208, 255), rgb(255, 0, 255)); /* Standard syntax (must be last) */
+    background-image: linear-gradient(to bottom right, rgb(0, 255, 0), rgb(0, 208, 255), rgb(255, 0, 255)); /* Standard syntax (must be last)
+} */
+
+body {
+	background: linear-gradient(-45deg, rgb(0, 255, 0), rgb(0, 208, 255), rgb(255, 0, 255));
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
 }
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 footer {
     position: fixed;
     left: 0;
