--- a/playlist/templates/index.html
+++ b/playlist/templates/index.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 <!--CSS code (Need to work on later)-->
-<!--{% load static %}-->
+{% load static %}
 <html>
- <!--<head>
+ <head>
         {% block head %}
-        <link rel="stylesheet" type="text/css" href="{% static 'question/style.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'playlist/style.css' %}">
         {% endblock head %}
-    </head>-->
+    </head>
 <body>
 {% block content %}
   <h3>myTunes {% if playlists %}<small class="text-muted">({{ playlists|length }} Playlists)</small>{% endif %}</h3>
