--- a/playlist/templates/new_playlist.html
+++ b/playlist/templates/new_playlist.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% extends 'base.html' %}
 <!--CSS code (Need to work on later)-->
-<!--{% load static %}-->
+{% load static %}
 <html>
- <!--<head>
+ <head>
         {% block head %}
         <link rel="stylesheet" type="text/css" href="{% static 'question/style.css' %}">
         {% endblock head %}
-    </head>-->
+    </head>
     
 {% block content %}
 <form action='' method='POST'> 
