--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
       </form>
     </nav>
     <main role="main" class="container" style="margin-top: 4vh;">
+    <div class="push"></div>
       {% block content %}
         <div class="row">
           <div class="col m-4">
@@ -48,6 +49,13 @@
     </script>
     
     <footer class="bg-dark p-5 text-white">
-      <center>&copy; myTunes 2020</center>
+      <div class="container">
+          <a href="/">Terms of Service</a>
+          &emsp;
+          <a href="/">Privacy Policy</a>
+          &emsp;
+          <a href="/">Help Center</a>
+      </div>
+        <center>&copy; myTunes Inc 2020</center>
     </footer>
   </body>
