--- a/playlist/templates/new_playlist.html
+++ b/playlist/templates/new_playlist.html
@@ -1,11 +1,10 @@
 {% extends 'base.html' %}
-{% extends 'base.html' %}
 <!--CSS code (Need to work on later)-->
 {% load static %}
 <html>
  <head>
         {% block head %}
-        <link rel="stylesheet" type="text/css" href="{% static 'question/style.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'playlist/style.css' %}">
         {% endblock head %}
     </head>
     
