--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,11 +1,14 @@
 {% extends 'base.html' %}
+
 {% load static %}
 <html>
-    <head>
+ <head>
         {% block head %}
         <link rel="stylesheet" type="text/css" href="{% static 'playlist/style.css' %}">
         {% endblock head %}
     </head>
+<body>
+
 {% block content %}
   <h3>Sign Up <small class="text-muted">to create your own playlists!</small></h3>
   <hr>
