--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
+
 {% load static %}
 <html>
-    <head>
+ <head>
         {% block head %}
         <link rel="stylesheet" type="text/css" href="{% static 'playlist/style.css' %}">
         {% endblock head %}
     </head>
+<body>
 
 {% block content %}
     <h3>Log In <small class="text-muted">to create your own playlists!</small></h3>
