--- a/templates/base.html
+++ b/templates/base.html
@@ -83,6 +83,6 @@
           &emsp;
           <a href="/">Help Center</a>
       </div>
-        <center>&copy; myTunes Inc 2020</center>
+        <center>&copy; myTunes Inc 2020. All Rights Reserved</center>
     </footer>
   </body>
