--- a/playlist/templates/new_playlist.html
+++ b/playlist/templates/new_playlist.html
@@ -1,4 +1,13 @@
 {% extends 'base.html' %}
+{% load static %}
+
+<html>
+ <head>
+        {% block head %}
+        <link rel="stylesheet" type="text/css" href="{% static 'playlist/style.css' %}">
+        {% endblock head %}
+    </head>
+<body>
     
 {% block content %}
 <form action='' method='POST'> 
