--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,43 +10,51 @@
 <body>
 
 {% block content %}
-    <h3>Log In <small class="text-muted">to create your own playlists!</small></h3>
-    <hr>
-    <div class="row">
-        <div class="col">
-            {% if form.errors %}
-                <p>Your username and password didn't match. Please try again.</p>
-            {% endif %}
+<div class="container">
+    <div class="col-lg-10 col-xl-9 mx-auto">
+        <div class="card card-signin flex-row my-5">
+            <div class="card-body">
+            <h3>Log In <small class="text-muted">to create your own playlists!</small></h3>
+            <hr>
+            <div class="row">
+                <div class="col">
+                    {% if form.errors %}
+                        <p>Your username and password didn't match. Please try again.</p>
+                    {% endif %}
 
-            {% if next %}
-                {% if user.is_authenticated %}
-                    <p>Your account doesn't have access to this page. To proceed, please login with an account that has access.</p>
-                {% else %}
-                    <p>Please login to see this page.</p>
-                {% endif %}
-            {% endif %}
+                    {% if next %}
+                        {% if user.is_authenticated %}
+                            <p>Your account doesn't have access to this page. To proceed, please login with an account that has access.</p>
+                        {% else %}
+                            <p>Please login to see this page.</p>
+                        {% endif %}
+                    {% endif %}
 
-            <form method="post" action="{% url 'login' %}" class="mx-auto">
-                {% csrf_token %}
-                <div class="form-group row">
-                    <div class="col-8">
-                        <label for="id_username">Username</label>
-                        <input class="form-control" type="text" name="username" id="id_username" required>
-                    </div>
+                    <form method="post" action="{% url 'login' %}" class="mx-auto">
+                        {% csrf_token %}
+                        <div class="form-group row">
+                            <div class="col-8">
+                                <label for="id_username">Username</label>
+                                <input class="form-control" type="text" name="username" id="id_username" required>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-8">
+                                <label for="id_password">Password</label>
+                                <input class="form-control" type="password" name="password" id="id_password" required>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-8">
+                                <input type="submit" value="login" class="btn btn-success">
+                                <input type="hidden" name="next" value="{{ next }}">
+                            </div>
+                        </div>
+                    </form>
                 </div>
-                <div class="form-group row">
-                    <div class="col-8">
-                        <label for="id_password">Password</label>
-                        <input class="form-control" type="password" name="password" id="id_password" required>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <div class="col-8">
-                        <input type="submit" value="login" class="btn btn-success">
-                        <input type="hidden" name="next" value="{{ next }}">
-                    </div>
-                </div>
-            </form>
+            </div>
         </div>
     </div>
+</div>
+</div>
 {% endblock %}
