--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -10,25 +10,33 @@
 <body>
 
 {% block content %}
-  <h3>Sign Up <small class="text-muted">to create your own playlists!</small></h3>
-  <hr>
-      <div class="row">
-        <div class="col">
-          <form method="post" class="mx-auto">
-            {% csrf_token %}
-            {% for field in form %}
-                {% for error in field.errors %}
-                    <p class="text-danger">{{ error }}</p>
-                {% endfor %}
-                <div class="form-group row">
-                    <div class="col-8">
-                      <label for="id_{{ field.name }}">{{ field.label|title }}:</label>
-                      <input class="form-control" type="{% if "password" in field.name %}password{% else %}text{% endif %}" name="{{ field.name }}" id="id_{{ field.name }}" required>
-                    </div>
+<div class="container">
+  <div class="col-lg-10 col-xl-9 mx-auto">
+      <div class="card card-signin flex-row my-5">
+          <div class="card-img-left d-none d-md-flex">
+          <div class="card-body">
+            <h3>Sign Up <small class="text-muted">to create your own playlists!</small></h3>
+            <hr>
+                <div class="row">
+                  <div class="col">
+                    <form method="post" class="mx-auto">
+                      {% csrf_token %}
+                      {% for field in form %}
+                          {% for error in field.errors %}
+                              <p class="text-danger">{{ error }}</p>
+                          {% endfor %}
+                          <div class="form-group row">
+                              <div class="col-8">
+                                <label for="id_{{ field.name }}">{{ field.label|title }}:</label>
+                                <input class="form-control" type="{% if "password" in field.name %}password{% else %}text{% endif %}" name="{{ field.name }}" id="id_{{ field.name }}" required>
+                              </div>
+                          </div>
+                      {% endfor %}
+                      <button type="submit" class="btn btn-success">Sign up</button>
+                    </form>
+                  </div>
                 </div>
-            {% endfor %}
-            <button type="submit" class="btn btn-success">Sign up</button>
-          </form>
-        </div>
-      </div>
+              </div>
+            </div>
+          </div>
 {% endblock %}
