--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -14,7 +14,7 @@
     <div class="col-lg-10 col-xl-9 mx-auto">
         <div class="card card-signin flex-row my-5">
             <div class="card-body">
-            <h3>Log In <small class="text-muted">to create your own playlists!</small></h3>
+                <i class='far fa-id-card' style='font-size:50px'></i><h3>Log In <small class="text-muted">to create your own playlists!</small></h3>
             <hr>
             <div class="row">
                 <div class="col">
