--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -15,7 +15,7 @@
       <div class="card card-signin flex-row my-5">
           <div class="card-img-left d-none d-md-flex">
           <div class="card-body">
-            <h3>Sign Up <small class="text-muted">to create your own playlists!</small></h3>
+            <i class='fas fa-user-plus' style='font-size:50px'></i><h3>New Member? Sign up <small class="text-muted">to create your own playlists!</small></h3>
             <hr>
                 <div class="row">
                   <div class="col">
