--- a/templates/base.html
+++ b/templates/base.html
@@ -61,3 +61,107 @@
         <center>&copy; myTunes Inc 2020. All Rights Reserved</center>
     </footer>
   </body>
+
+
+<style>
+/* body {
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-image: linear-gradient(to bottom right, rgb(0, 255, 0), rgb(0, 208, 255), rgb(255, 0, 255));
+} */
+
+body {
+background-image: linear-gradient(to bottom right, rgb(0, 255, 0), rgb(0, 208, 255), rgb(255, 0, 255));
+/* background: linear-gradient(-45deg, rgb(0, 145, 123), rgb(255, 175, 29), rgb(138, 65, 180)); */
+background-size: 1000% 400%;
+animation: gradient 15s ease infinite;
+font-weight: 400;
+}
+
+@keyframes gradient {
+0% {
+  background-position: 0% 50%;
+}
+50% {
+  background-position: 100% 50%;
+}
+100% {
+  background-position: 0% 50%;
+}
+}
+
+header.masthead {
+position: relative;
+width: 100%;
+padding-top: 150px;
+padding-bottom: 100px;
+color: white;
+}
+
+section.about {
+position: relative;
+width: 100%;
+padding-top: 125px;
+padding-bottom: 100px;
+}
+
+section.sign-up {
+position: relative;
+width: 100%;
+padding-top: 125px;
+padding-bottom: 100px;
+}
+
+section.features {
+position: relative;
+width: 100%;
+padding-top: 125px;
+padding-bottom: 100px;
+}
+
+section.features .section-heading {
+margin-bottom: 50px;
+}
+
+section.features .feature-item {
+padding-top: 50px;
+padding-bottom: 50px;
+text-align: center;
+}
+
+section.features .feature-item i {
+font-size: 80px;
+display: block;
+margin-bottom: 15px;
+}
+
+footer {
+position: fixed;
+left: 0;
+bottom: 0;
+width: 100%;
+  text-align: center;
+}
+
+h1 {
+font-size: 150px;
+}
+
+h2 {
+font-size: 50px;
+}
+
+h3 {
+font-size: 37px;
+}
+
+h4 {
+font-size: 25px;
+}
+
+h5 {
+font-size: 20px;
+}
+</style>
