--- a/playlist/templates/home.html
+++ b/playlist/templates/home.html
@@ -39,7 +39,7 @@
                 <h3>Not a member?</h3>
                 <hr>
                 <i class="fa fa-user"style="font-size:50px"></i>
-                <h4>Sign Up Today!</h4>
+                <a href="/accounts/signup"><h4>Sign Up Today!</h4></a>
                 <h5>It's completely free and easy to do.</h5>
             </div>
           </div>
